set(headers
  Array++.h
  BandMatrix++.h
  Bezier++.h
  BlockDiagonalMatrix++.h
  BoxFilter.h
  Camera++.h
  DP.h
  DericheConvolver.h
  EdgeDetector.h
  FIRFilter.h
  FIRGaussianConvolver.h
  Feature.h
  FeatureMatch.h
  Filter2.h
  GFStereo.h
  GaussianConvolver.h
  Geometry++.h
  GraphCuts.h
  GuidedFilter.h
  ICIA.h
  IIRFilter.h
  Image++.h
  IntegralImage.h
  List.h
  Manip.h
  Mesh++.h
  Minimize.h
  Movie.h
  NDTree++.h
  Nurbs++.h
  PM16C_04.h
  Profiler.h
  Quantizer.h
  Ransac.h
  Rectify.h
  SADStereo.h
  SHOT602.h
  SURFCreator.h
  SeparableFilter2.h
  Serial.h
  SparseMatrix++.h
  StereoBase.h
  StereoUtility.h
  TreeFilter.h
  TriggerGenerator.h
  Vector++.h
  Warp.h
  WeightedMedianFilter.h
  algorithm.h
  fdstream.h
  functional.h
  io.h
  iterator.h
  pair.h
  range.h)

add_subdirectory(simd)

install(FILES ${headers} DESTINATION include/TU)
