add_subdirectory(BandMatrix)
add_subdirectory(Bezier)
#add_subdirectory(BoxFilter)
#add_subdirectory(BoxFilter2)
add_subdirectory(DP)
add_subdirectory(EdgeDetector)
add_subdirectory(FIRFilter)
add_subdirectory(GraphCuts)
add_subdirectory(GuidedFilter)
add_subdirectory(ICIA)
add_subdirectory(IIRFilter)
add_subdirectory(List)
add_subdirectory(Mesh)
add_subdirectory(NDTree)
add_subdirectory(Quantizer)
add_subdirectory(SURF)
add_subdirectory(Serial)
add_subdirectory(Spline)
add_subdirectory(TreeFilter)
add_subdirectory(Vector)
add_subdirectory(WeightedMedianFilter)
add_subdirectory(array)
add_subdirectory(filterStereo)
add_subdirectory(pair)
add_subdirectory(simd)
add_subdirectory(stereoGUI)
add_subdirectory(stereoIIDC)
add_subdirectory(stereoTest)
add_subdirectory(stereoTime)
if(LINUX)
  add_subdirectory(stereoV4L2)
endif()
add_subdirectory(tuple)
